# my_perceptron

./: CMakeLists.txt  Makefile  README.md
data/: iris-dataset.data
includes/: header.h  struct.h
save/: myWeights.conf
src/: getData.c  gradient.c  handleError.c  loadNetwork.c  main.c  mathFunction.c  network.c  saveWeights.c  train.c
